--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,3 +124,11 @@ h6 {
 #__next {
 	isolation: isolate;
 }
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	margin: 0;
+}
